--- a/src/pages/ru/portfolio/h2ovoda.astro
+++ b/src/pages/ru/portfolio/h2ovoda.astro
@@ -1,17 +1,14 @@
 ---
 import { Image } from 'astro:assets'
 import Layout from '../../../layouts/Layout.astro'
-import PortfolioCard from '../../../components/PortfolioCard.astro'
-import byshikat from '../../../images/online-store-byshikat.png'
 import h2ovoda from '../../../images/h2ovoda.png'
-
 import { getLangFromUrl, useTranslations } from "../../../i18n/utils";
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<Layout title={t('nav.portfolio')}>
+<Layout title='VRATSKYI - h2ovoda'>
 
       
     <div class="relative overflow-hidden w-full h-full">
@@ -22,15 +19,51 @@ const t = useTranslations(lang);
             <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-20" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
           </div>
 
-        <div class="grid lg:grid-flow-col gap-x-20 place-content-center place-items-start mt-[60px] lg:mt-[200px] p-5 md:p-0">
+          <div class="grid place-content-start place-self-start mt-[80px] w-full max-w-[1280px] mx-auto">
+              <div class="text-sm breadcrumbs">
+                  <ul>
+                      <li><a href={`/${lang}/`} class="grid grid-flow-col place-content-stretch hover:text-primary duration-150">
+                          <svg class="inline-block w-6 h-6 mr-3" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
+                              <g fill="none" stroke="currentColor" stroke-width="1.5">
+                                  <path d="M2 12.204c0-2.289 0-3.433.52-4.381c.518-.949 1.467-1.537 3.364-2.715l2-1.241C9.889 2.622 10.892 2 12 2c1.108 0 2.11.622 4.116 1.867l2 1.241c1.897 1.178 2.846 1.766 3.365 2.715c.519.948.519 2.092.519 4.38v1.522c0 3.9 0 5.851-1.172 7.063C19.657 22 17.771 22 14 22h-4c-3.771 0-5.657 0-6.828-1.212C2 19.576 2 17.626 2 13.725z" />
+                                  <path stroke-linecap="round" d="M12 15v3" />
+                              </g>
+                          </svg>
+                          {t('nav.home')}
+                      </a></li>
+                      <li><a href={`/${lang}/portfolio`} class="grid grid-flow-col place-content-stretch hover:text-primary duration-150">
+                          <svg class="inline-block w-6 h-6 mr-3" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
+                              <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+                                  <path d="M7 2h10M5 6h14" />
+                                  <rect width="18" height="12" x="3" y="10" rx="2" />
+                              </g>
+                          </svg>
+                          {t('nav.portfolio')}
+                      </a>
+                  </li>
+                  <li>
+                    <svg class="inline-block w-6 h-6 mr-3" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
+                        <g fill="none" stroke="currentColor" stroke-width="1.8">
+                            <path d="M14 6h-4c-1.356 0-2.468 0-3.39.054c-1.645.097-2.688.367-3.438 1.118C2 8.343 2 10.229 2 14c0 3.771 0 5.657 1.172 6.828C4.343 22 6.229 22 10 22h4c3.771 0 5.657 0 6.828-1.172C22 19.657 22 17.771 22 14c0-3.771 0-5.657-1.172-6.828c-.75-.75-1.793-1.02-3.437-1.118C16.468 6 15.356 6 14 6Z" />
+                            <path d="M6.61 6.054c.823-.02 1.55-.6 1.83-1.374l.035-.103L8.5 4.5c.042-.127.064-.19.086-.246a2 2 0 0 1 1.735-1.25C10.38 3 10.448 3 10.58 3h2.838c.133 0 .2 0 .26.004a2 2 0 0 1 1.735 1.25c.023.056.044.12.086.246l.026.077c.018.053.026.08.035.103c.28.775 1.007 1.354 1.83 1.374" opacity="0.5" />
+                            <path stroke-linecap="round" d="M21.662 8.72c-3.01 1.956-4.515 2.934-6.101 3.427a12 12 0 0 1-7.121 0c-1.587-.493-3.092-1.47-6.102-3.427" opacity="0.5" />
+                            <path stroke-linecap="round" d="M8 11v2m8-2v2" />
+                        </g>
+                    </svg>
+                      h2ovoda
+              </li>
+                  </ul>
+                </div>
+          </div>
 
+          <div class="grid lg:grid-flow-col gap-x-20 place-content-center place-items-start mt-[60px] lg:mt-[80px] p-5 md:p-0">
             <div class="p-5">
-                <h1 class="relative">Последний проект <span class="badge badge-primary text-xs absolute top-0 ml-3">новый</span>
+                <h1 class="relative">Сайт доставки воды 2.0
             </h1>
             <p class="prose">
-                Сайт для доставки воды по Белогородке и соседних 
-                районах обновлен с привлекательным дизайном, 
-                удобным заказом и интеграцией аналитики для вовлечения клиентов.
+                Я переделал сайт, чтобы предложить услуги по доставке воды в Белогородке и соседних регионах. 
+                Сайт имеет привлекательный дизайн, удобную верстку и простую интеграцию с аналитическими инструментами для повышения вовлеченности клиентов. 
+                Пользователи могут легко отправить заявку на доставку воды через форму заказа и получить удобный доступ к бутилированной питьевой воде.
             </p>
             <div class="grid grid-flow-col gap-x-5 place-content-center place-items-start mt-10 bg-base-200/50 backdrop-blur-3xl rounded-box p-5 lg:p-10">
                 <div class="grid place-items-center">
@@ -124,155 +157,5 @@ const t = useTranslations(lang);
 
         </div>
     </div>
-    
-    <div class="grid place-items-center place-content-center prose lg:prose-xl text-center mx-auto mb-10">
-      <h2>Все проекты</h2>
-      <p>Тут представлены все мои проекты, как коммерчиские так и персональные.</p>
-    </div>
-    <div class="my-10 grid grid-flow-col auto-cols-auto lg:auto-cols-max grid-rows-2 lg:grid-rows-3 place-content-center gap-10 mx-auto w-full max-w-[1280px]">
-      <PortfolioCard 
-      image={{
-         src: h2ovoda,
-         alt: "Сайт доставки воды 2.0",
-      }},
-      label='коммерчиский сайт'
-      title='Сайт доставки воды 2.0'
-      description='Сайт для доставки воды по Белогородке и соседних районах обновлен с привлекательным дизайном, удобным заказом и интеграцией аналитики для вовлечения клиентов.'
-      activeButton={{ 
-        title: 'Подробнее',
-        link: `/${lang}/portfolio/h2ovoda`
-      }},
-      exturnalButton={{ 
-        title: 'Смотреть проект',
-        link: 'https://h2ovoda.com.ua/'
-      }}
-       />
 
-       <PortfolioCard 
-       image={{
-          src: byshikat,
-          alt: "online-store-byshikat",
-       }},
-       label='вебсайт'
-       title='Заголовок'
-       description='описание'
-       activeButton={{ 
-         title: 'Подробнее',
-         link: '/portfolio/byshikat'
-       }},
-       exturnalButton={{ 
-         title: 'Смотреть проект',
-         link: 'https://byshikat.com/'
-       }}
-        />
-
-        <PortfolioCard 
-        image={{
-           src: byshikat,
-           alt: "online-store-byshikat",
-        }},
-        label='вебсайт'
-        title='Заголовок'
-        description='описание'
-        activeButton={{ 
-          title: 'Подробнее',
-          link: '/portfolio/byshikat'
-        }},
-        exturnalButton={{ 
-          title: 'Смотреть проект',
-          link: 'https://byshikat.com/'
-        }}
-         />
-
-         <PortfolioCard 
-         image={{
-            src: byshikat,
-            alt: "online-store-byshikat",
-         }},
-         label='вебсайт'
-         title='Заголовок'
-         description='описание'
-         activeButton={{ 
-           title: 'Подробнее',
-           link: '/portfolio/byshikat'
-         }},
-         exturnalButton={{ 
-           title: 'Смотреть проект',
-           link: 'https://byshikat.com/'
-         }}
-          />
-
-          <PortfolioCard 
-          image={{
-             src: byshikat,
-             alt: "online-store-byshikat",
-          }},
-          label='вебсайт'
-          title='Заголовок'
-          description='описание'
-          activeButton={{ 
-            title: 'Подробнее',
-            link: '/portfolio/byshikat'
-          }},
-          exturnalButton={{ 
-            title: 'Смотреть проект',
-            link: 'https://byshikat.com/'
-          }}
-           />
-
-           <PortfolioCard 
-           image={{
-              src: byshikat,
-              alt: "online-store-byshikat",
-           }},
-           label='вебсайт'
-           title='Заголовок'
-           description='описание'
-           activeButton={{ 
-             title: 'Подробнее',
-             link: '/portfolio/byshikat'
-           }},
-           exturnalButton={{ 
-             title: 'Смотреть проект',
-             link: 'https://byshikat.com/'
-           }}
-            />
-
-            <PortfolioCard 
-            image={{
-               src: byshikat,
-               alt: "online-store-byshikat",
-            }},
-            label='вебсайт'
-            title='Заголовок'
-            description='описание'
-            activeButton={{ 
-              title: 'Подробнее',
-              link: '/portfolio/byshikat'
-            }},
-            exturnalButton={{ 
-              title: 'Смотреть проект',
-              link: 'https://byshikat.com/'
-            }}
-             />
-
-             <PortfolioCard 
-             image={{
-                src: byshikat,
-                alt: "online-store-byshikat",
-             }},
-             label='вебсайт'
-             title='Заголовок'
-             description='описание'
-             activeButton={{ 
-               title: 'Подробнее',
-               link: '/portfolio/byshikat'
-             }},
-             exturnalButton={{ 
-               title: 'Смотреть проект',
-               link: 'https://byshikat.com/'
-             }}
-              />
-    </div>
-    
 </Layout>
