--- a/src/components/PortfolioCard.astro
+++ b/src/components/PortfolioCard.astro
@@ -23,14 +23,14 @@ interface Props {
 const { image, title, description, label, activeButton, exturnalButton  } = Astro.props;
 ---
 
-<div>
+<div class="w-full max-w-[400px]">
     <div>
         {image && (
             <Image 
                 format='avif'
                 class='w-full max-w-[400px] max-h-[400px] h-full object-cover object-center rounded-box'
                 src={image.src} 
-                alt={image.alt || ''} 
+                alt={image.alt || 'cover'} 
                 width='400'
                 height='300'
             /> 
@@ -47,9 +47,12 @@ const { image, title, description, label, activeButton, exturnalButton  } = Astr
                 </a>
             )} 
             {exturnalButton && (
-                <a class="btn btn-sm btn-outline" href={exturnalButton.link || ''}>
+                <a class="btn btn-sm btn-outline" target="_blank" href={exturnalButton.link || ''}>
                     {exturnalButton.title || ''}
-                </a>
+                    <svg class="inline-block w-4 h-4 ml-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
+                    <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M21 3h-6.75M21 3v6.75M21 3l-8.25 8.25M9.4 3c-2.24 0-3.36 0-4.216.436a4 4 0 0 0-1.748 1.748C3 6.04 3 7.16 3 9.4v5.2c0 2.24 0 3.36.436 4.216a4 4 0 0 0 1.748 1.748C6.04 21 7.16 21 9.4 21h5.2c2.24 0 3.36 0 4.216-.436a4 4 0 0 0 1.748-1.748C21 17.96 21 16.84 21 14.6v-1.1" />
+                    </svg>
+                    </a>
             )} 
         </div>
     </div>
