--- a/src/components/PortfolioCard.astro
+++ b/src/components/PortfolioCard.astro
@@ -37,7 +37,7 @@ const { image, title, description, label, activeButton, exturnalButton  } = Astr
         )}
     </div>
     <div class="mt-10">
-        <span class="badge badge-primary">{label}</span>
+        <span class="badge badge-accent">{label}</span>
         <h2>{title}</h2>
         <p>{description}</p>
         <div class="grid grid-flow-col gap-x-5 place-items-start place-content-start">
