--- a/src/pages/ru/portfolio/byshikat.astro
+++ b/src/pages/ru/portfolio/byshikat.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from 'astro:assets'
 import Layout from '../../../layouts/Layout.astro'
-import h2ovoda from '../../../images/h2ovoda.png'
+import byshikat from '../../../images/online-store-byshikat.png'
 import { getLangFromUrl, useTranslations } from "../../../i18n/utils";
 
 const lang = getLangFromUrl(Astro.url);
@@ -58,12 +58,12 @@ const t = useTranslations(lang);
 
           <div class="grid lg:grid-flow-col gap-x-20 place-content-center place-items-start mt-[60px] lg:mt-[80px] p-5 md:p-0">
             <div class="p-5">
-                <h1 class="relative">Сайт доставки воды 2.0
+                <h1 class="relative">Byshikat интернет-магазин обуви
             </h1>
             <p class="prose">
-                Я переделал сайт, чтобы предложить услуги по доставке воды в Белогородке и соседних регионах. 
-                Сайт имеет привлекательный дизайн, удобную верстку и простую интеграцию с аналитическими инструментами для повышения вовлеченности клиентов. 
-                Пользователи могут легко отправить заявку на доставку воды через форму заказа и получить удобный доступ к бутилированной питьевой воде.
+                Проанализировав целевую аудиторию, я понял, что нужно сделать что-то похожее на модель поведения в Instagram, 
+                а также похожий хотя бы отдаленно дизайн, 
+                благодаря набору решений продажи из их instagram-магазина перешли в интернет-магазин и увеличились на 1000%
             </p>
             <div class="grid grid-flow-col gap-x-5 place-content-center place-items-start mt-10 bg-base-200/50 backdrop-blur-3xl rounded-box p-5 lg:p-10">
                 <div class="grid place-items-center">
@@ -103,19 +103,14 @@ const t = useTranslations(lang);
                 </div>
             </div>
             <div class="grid grid-flow-col gap-x-10 place-content-center place-items-center mt-10">
-              <svg class="inline-block w-8 h-8" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 32 32">
-                <path fill="url(#vscodeIconsFileTypeAstro0)" d="M11.025 20.499c-.532 1.75-.154 4.184 1.105 5.331v-.042l.042-.112c.154-.741.756-1.203 1.526-1.175c.713.014 1.12.392 1.217 1.217c.042.308.042.616.056.938v.098c0 .7.196 1.371.588 1.959c.35.56.84.993 1.497 1.287l-.028-.056l-.028-.112c-.49-1.469-.14-2.49 1.147-3.358l.392-.266l.868-.573a4.254 4.254 0 0 0 1.791-3.037c.07-.532 0-1.05-.154-1.553l-.21.14c-1.945 1.035-4.17 1.4-6.325.98c-1.301-.197-2.56-.56-3.498-1.652z" />
-                <path fill="#fff" d="M4.925 20.191s3.736-1.82 7.486-1.82l2.84-8.759c.098-.42.406-.7.756-.7s.644.28.756.714l2.826 8.746c4.45 0 7.487 1.82 7.487 1.82L20.709 2.84c-.168-.518-.49-.84-.896-.84h-7.612c-.406 0-.7.322-.896.84z" />
-                <defs>
-                  <linearGradient id="vscodeIconsFileTypeAstro0" x1="8.19" x2="16.91" y1="23" y2="18.89" gradientTransform="translate(-.673 -2.198)scale(1.3993)" gradientUnits="userSpaceOnUse">
-                    <stop offset="0" stop-color="#d83333" />
-                    <stop offset="1" stop-color="#f041ff" />
-                  </linearGradient>
-                </defs>
-              </svg>
-              <svg class="inline-block w-8 h-8" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 128 128">
-                <path fill="#38bdf8" d="M64.004 25.602c-17.067 0-27.73 8.53-32 25.597c6.398-8.531 13.867-11.73 22.398-9.597c4.871 1.214 8.352 4.746 12.207 8.66C72.883 56.629 80.145 64 96.004 64c17.066 0 27.73-8.531 32-25.602c-6.399 8.536-13.867 11.735-22.399 9.602c-4.87-1.215-8.347-4.746-12.207-8.66c-6.27-6.367-13.53-13.738-29.394-13.738M32.004 64c-17.066 0-27.73 8.531-32 25.602C6.402 81.066 13.87 77.867 22.402 80c4.871 1.215 8.352 4.746 12.207 8.66c6.274 6.367 13.536 13.738 29.395 13.738c17.066 0 27.73-8.53 32-25.597c-6.399 8.531-13.867 11.73-22.399 9.597c-4.87-1.214-8.347-4.746-12.207-8.66C55.128 71.371 47.868 64 32.004 64m0 0" />
-              </svg>
+                <svg class="inline-block w-8 h-8" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 256 256">
+                    <g fill="none">
+                        <rect width="256" height="256" fill="#0073aa" rx="60" />
+                        <path fill="#fff" d="M42.214 127.994c0 33.955 19.733 63.299 48.347 77.205L49.641 93.083a85.46 85.46 0 0 0-7.427 34.911m143.694-4.329c0-10.601-3.808-17.943-7.074-23.658c-4.349-7.066-8.425-13.05-8.425-20.116c0-7.886 5.981-15.226 14.405-15.226c.381 0 .741.047 1.112.068c-15.262-13.982-35.595-22.519-57.929-22.519c-29.968 0-56.335 15.376-71.673 38.666c2.012.06 3.909.103 5.52.103c8.973 0 22.862-1.09 22.862-1.09c4.624-.272 5.17 6.52.55 7.067c0 0-4.647.547-9.818.818l31.238 92.918l18.773-56.303l-13.365-36.618c-4.619-.271-8.995-.818-8.995-.818c-4.623-.271-4.081-7.339.542-7.066c0 0 14.166 1.088 22.595 1.088c8.972 0 22.862-1.088 22.862-1.088c4.628-.273 5.171 6.519.55 7.066c0 0-4.657.547-9.818.818l31.001 92.214l8.556-28.592c3.709-11.866 6.531-20.388 6.531-27.732" />
+                        <path fill="#fff" d="m129.503 135.498l-25.738 74.79a85.779 85.779 0 0 0 24.233 3.495a85.682 85.682 0 0 0 28.486-4.863a7.476 7.476 0 0 1-.61-1.182zm73.766-48.66a65.8 65.8 0 0 1 .578 8.82c0 8.705-1.626 18.491-6.523 30.727l-26.203 75.759c25.503-14.872 42.657-42.501 42.657-74.148c.001-14.915-3.808-28.94-10.509-41.158" />
+                        <path fill="#fff" d="M127.998 28C72.86 28 28 72.857 28 127.994c0 55.144 44.86 99.999 99.998 99.999c55.135 0 100.002-44.855 100.002-99.999C227.998 72.857 183.133 28 127.998 28m0 195.41c-52.61 0-95.413-42.804-95.413-95.416c0-52.609 42.802-95.409 95.413-95.409c52.607 0 95.407 42.8 95.407 95.409c0 52.612-42.8 95.416-95.407 95.416" />
+                    </g>
+                </svg>
               <svg class="inline-block w-8 h-8" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 256 256">
                 <g fill="none">
                   <rect width="256" height="256" fill="#f0db4f" rx="60" />
@@ -147,10 +142,10 @@ const t = useTranslations(lang);
             <div class="order-first lg:order-last not-prose">
                 <div class="mockup-browser bg-base-300">
                     <div class="mockup-browser-toolbar">
-                      <div class="input"><a class="hover:text-primary duration-150 not-prose text-sm" href="https://h2ovoda.com.ua" target="_blank">https://h2ovoda.com.ua</a></div>
+                      <div class="input"><a class="hover:text-primary duration-150 not-prose text-sm" href="https://byshikat.com/" target="_blank">https://byshikat.com/</a></div>
                     </div>
                     <div class="flex justify-center bg-base-200">
-                        <Image src={h2ovoda} class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" format='avif' alt='H2O Вода' width='600' height='400' />
+                        <Image src={byshikat} class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" format='avif' alt='H2O Вода' width='600' height='400' />
                     </div>
                   </div>
             </div>
