--- a/src/pages/ua/portfolio/vratskyi-blog.astro
+++ b/src/pages/ua/portfolio/vratskyi-blog.astro
@@ -1,14 +1,14 @@
 ---
 import { Image } from 'astro:assets'
 import Layout from '../../../layouts/Layout.astro'
-import h2ovoda from '../../../images/h2ovoda.png'
+import vratskyiBlog from '../../../images/ov-main.png'
 import { getLangFromUrl, useTranslations } from "../../../i18n/utils";
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<Layout title='VRATSKYI - h2ovoda'>
+<Layout title='VRATSKYI - vratskyi-blog'>
 
       
     <div class="relative overflow-hidden w-full h-full">
@@ -50,7 +50,7 @@ const t = useTranslations(lang);
                             <path stroke-linecap="round" d="M8 11v2m8-2v2" />
                         </g>
                     </svg>
-                      h2ovoda
+                    vratskyi-blog
               </li>
                   </ul>
                 </div>
@@ -58,12 +58,13 @@ const t = useTranslations(lang);
 
           <div class="grid lg:grid-flow-col gap-x-20 place-content-center place-items-start mt-[60px] lg:mt-[80px] p-5 md:p-0">
             <div class="p-5">
-                <h1 class="relative">Сайт доставки воды 2.0
+                <h1 class="relative">Персональный блог и портфолио
             </h1>
             <p class="prose">
-                Я переделал сайт, чтобы предложить услуги по доставке воды в Белогородке и соседних регионах. 
-                Сайт имеет привлекательный дизайн, удобную верстку и простую интеграцию с аналитическими инструментами для повышения вовлеченности клиентов. 
-                Пользователи могут легко отправить заявку на доставку воды через форму заказа и получить удобный доступ к бутилированной питьевой воде.
+                Представляем вашему вниманию универсальный и бесплатный шаблон, разработанный для использования с последней версией Astro. 
+                Этот шаблон может похвастаться частыми обновлениями, удобным интерфейсом и совместимостью с различными целями. 
+                Идеально подходит для демонстрации портфолио, создания статей в блоге и личного рассказа. 
+                Раскройте потенциал для самовыражения без особых усилий с помощью этого шаблона.
             </p>
             <div class="grid grid-flow-col gap-x-5 place-content-center place-items-start mt-10 bg-base-200/50 backdrop-blur-3xl rounded-box p-5 lg:p-10">
                 <div class="grid place-items-center">
@@ -136,21 +137,15 @@ const t = useTranslations(lang);
                   <path fill="#fff" d="m167.318 134.593l-3.708 41.426l-35.625 9.616v33.231l65.483-18.148l.48-5.397l7.506-84.092l.779-8.578L208 38h-80.015v31.942h45.009l-2.906 32.709h-42.103v31.942z" />
                 </g>
               </svg>
-              <svg class="inline-block w-8 h-8 text-blue-400" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 256 256">
-                <g fill="none">
-                  <rect width="256" height="256" fill="CurrentColor" rx="60" />
-                  <path fill="#000" d="M49.158 100.246h28.408c8.338.07 14.38 2.474 18.126 7.208c3.746 4.734 4.982 11.2 3.71 19.398c-.494 3.746-1.59 7.42-3.286 11.024c-1.626 3.604-3.886 6.854-6.784 9.752c-3.534 3.674-7.314 6.006-11.342 6.996c-4.028.99-8.198 1.484-12.508 1.484h-12.72l-4.028 20.14H34zM61.56 112.33l-6.36 31.8c.424.07.848.106 1.272.106h1.484c6.784.07 12.438-.6 16.96-2.014c4.522-1.484 7.562-6.642 9.116-15.476c1.272-7.42 0-11.696-3.816-12.826c-3.746-1.13-8.444-1.66-14.098-1.59c-.848.07-1.66.106-2.438.106h-2.226zM116.186 80h14.628l-4.134 20.246h13.144c7.208.142 12.578 1.626 16.112 4.452c3.604 2.826 4.664 8.198 3.18 16.112l-7.102 35.298h-14.84l6.784-33.708c.706-3.534.494-6.042-.636-7.526s-3.568-2.226-7.314-2.226l-11.766-.106l-8.692 43.566h-14.628zm58.638 20.246h28.408c8.338.07 14.38 2.474 18.126 7.208c3.746 4.734 4.982 11.2 3.71 19.398c-.494 3.746-1.59 7.42-3.286 11.024c-1.626 3.604-3.886 6.854-6.784 9.752c-3.534 3.674-7.314 6.006-11.342 6.996c-4.028.99-8.198 1.484-12.508 1.484h-12.72l-4.028 20.14h-14.734zm12.402 12.084l-6.36 31.8c.424.07.848.106 1.272.106h1.484c6.784.07 12.438-.6 16.96-2.014c4.522-1.484 7.562-6.642 9.116-15.476c1.272-7.42 0-11.696-3.816-12.826c-3.746-1.13-8.444-1.66-14.098-1.59c-.848.07-1.66.106-2.438.106h-2.226z" />
-                </g>
-              </svg>
             </div>
             </div>
             <div class="order-first lg:order-last not-prose">
                 <div class="mockup-browser bg-base-300">
                     <div class="mockup-browser-toolbar">
-                      <div class="input"><a class="hover:text-primary duration-150 not-prose text-sm" href="https://h2ovoda.com.ua" target="_blank">https://h2ovoda.com.ua</a></div>
+                      <div class="input"><a class="hover:text-primary duration-150 not-prose text-sm" href="https://vratskyi.pages.dev/en/" target="_blank">https://vratskyi.pages.dev/en/</a></div>
                     </div>
                     <div class="flex justify-center bg-base-200">
-                        <Image src={h2ovoda} class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" format='avif' alt='H2O Вода' width='600' height='400' />
+                        <Image src={vratskyiBlog} class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" format='avif' alt='H2O Вода' width='600' height='400' />
                     </div>
                   </div>
             </div>
