--- a/src/pages/ru/services/index.astro
+++ b/src/pages/ru/services/index.astro
@@ -12,16 +12,16 @@ const t = useTranslations(lang);
     <div class="mx-auto w-full max-w-[1024px]">
     <div class="absolute top-0 left-0 right-0 bottom-0 bg-grid z-[-1]"></div>
 
-    <section class="w-full min-w-full max-w-[1024px] my-[80px] lg:my-[150px] rounded-box bg-base-200/50 p-5 lg:p-20 grid backdrop-blur-3xl overflow-hidden isolate">
+    <section class="w-full min-w-full max-w-[1024px] my-[80px] lg:my-[150px] rounded-box p-5 lg:p-20 grid backdrop-blur-3xl overflow-hidden isolate">
       <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
-        <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-20" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+        <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.05]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
       </div>
       <div class="absolute -top-52 left-1/2 -z-10 -translate-x-1/2 transform-gpu blur-3xl sm:top-[-28rem] sm:ml-16 sm:translate-x-0 sm:transform-gpu" aria-hidden="true">
-        <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-20" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+        <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.05]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
       </div>
     
       <div class="grid not-prose p-3 lg:p-0">
-        <div class="grid lg:grid-flow-col gap-y-20 lg:gap-y-0 place-content-between place-items-center">
+        <div class="grid lg:grid-flow-col gap-y-20 lg:gap-y-0 place-content-center place-items-center text-center">
           <div>
     
             <div class="grid gap-y-5 lg:gap-y-0">
@@ -30,9 +30,6 @@ const t = useTranslations(lang);
                   Ваш проект уже ждет
                 </span>
               </h1>
-              <h2 class="text-5xl font-black">
-                Когда его начнут разрабатывать<br />
-            </h2>
           </div>
           <div class="mt-10 grid gap-y-5">
               <p class="prose lg:prose-lg break-words text-balance">
@@ -58,7 +55,7 @@ const t = useTranslations(lang);
             <div class="mx-auto mt-10 p-5 flex-row w-full bg-base-100 rounded-box ring-1 ring-secondary/20 sm:mt-20 lg:mx-0 lg:flex lg:max-w-none">
               <div class="p-8 sm:p-10 grid grid-flow-row">
                 <div>
-                  <h3 class="text-2xl font-black tracking-tight">Project <span class="text-secondary">S</span> - для небольшого сайта</h3>
+                  <h2 class="text-4xl font-black tracking-tight not-prose">Project <span class="text-secondary">S</span></h2>
                   <p class="mt-6 text-base leading-7">Закажите небольшой проект <a class="link link-primary" href="https://ru.wikipedia.org/wiki/%D0%A6%D0%B5%D0%BB%D0%B5%D0%B2%D0%B0%D1%8F_%D1%81%D1%82%D1%80%D0%B0%D0%BD%D0%B8%D1%86%D0%B0" target="_blank">лендинга</a>
                   и продайте ваш товар, расскажите о себе или спросите потенциальных клиентов чего они хотят?
                   </p>
@@ -98,11 +95,13 @@ const t = useTranslations(lang);
                   <div class="mx-auto max-w-xs px-8">
                     <p class="text-base font-semibold">Плати раз, пользуйся всегда.</p>
                     <p class="mt-6 flex items-baseline justify-center gap-x-2">
-                      <span class="text-5xl font-bold tracking-tight">от $150</span>
-                      <span class="text-sm font-semibold leading-6 tracking-wide">USD</span>
+                      <div class="text-5xl font-bold tracking-tight">
+                        <span class="tooltip tooltip-bottom underline decoration-sky-500 underline-offset-4 hover:cursor-pointer" data-tip="Цена указана только за работу и не учитывает стоимость услуг хостинг провайдера домена и других трат на запуск сайта.">от $150*</span>
+                        <span class="text-sm font-semibold leading-6 tracking-wide">USD</span>
+                      </div>
                     </p>
                     <a href="#" class="mt-10 w-full btn btn-primary">Обсудить проект</a>
-                    <p class="mt-6 text-xs leading-5">Цены могут отличаться взависимости от сложности проекта.</p>
+                    <p class="mt-6 text-xs leading-5">Цена может отличаться взависимости от сложности проекта.</p>
                   </div>
                 </div>
               </div>
@@ -111,9 +110,10 @@ const t = useTranslations(lang);
             <div class="mx-auto mt-16 p-5 flex-row w-full bg-base-100 rounded-box ring-1 ring-secondary/20 sm:mt-20 lg:mx-0 lg:flex lg:max-w-none">
               <div class="p-8 sm:p-10 grid grid-flow-row">
                 <div>
-                  <h3 class="text-2xl font-black tracking-tight">Project <span class="text-secondary">L</span> - для небольшого сайта</h3>
-                  <p class="mt-6 text-base leading-7">Закажите небольшой проект <a class="link link-primary" href="https://ru.wikipedia.org/wiki/%D0%A6%D0%B5%D0%BB%D0%B5%D0%B2%D0%B0%D1%8F_%D1%81%D1%82%D1%80%D0%B0%D0%BD%D0%B8%D1%86%D0%B0" target="_blank">лендинга</a>
-                  и продайте ваш товар, расскажите о себе или спросите потенциальных клиентов чего они хотят?
+                  <h2 class="text-4xl font-black tracking-tight not-prose">Project <span class="text-accent">L</span></h2>
+                  <p class="mt-6 text-base leading-7">
+                    Этот пакет подойдет для начального бизнес сайта/стартапа, расскажите о своей компании, предоставьте услуги, продавайте товары,
+                    интеграция с системами аналитики и удобный интерфейс администратора позволит вам сосредоточить усилия на продажах.
                   </p>
                 </div>
                 <div class="flex items-center gap-x-4">
@@ -151,11 +151,13 @@ const t = useTranslations(lang);
                   <div class="mx-auto max-w-xs px-8">
                     <p class="text-base font-semibold">Плати раз, пользуйся всегда.</p>
                     <p class="mt-6 flex items-baseline justify-center gap-x-2">
-                      <span class="text-5xl font-bold tracking-tight">от $250</span>
-                      <span class="text-sm font-semibold leading-6 tracking-wide">USD</span>
+                      <div class="text-5xl font-bold tracking-tight">
+                        <span class="tooltip tooltip-bottom underline decoration-sky-500 underline-offset-4 hover:cursor-pointer" data-tip="Цена указана только за работу и не учитывает стоимость услуг хостинг провайдера домена и других трат на запуск сайта.">от $250*</span>
+                        <span class="text-sm font-semibold leading-6 tracking-wide">USD</span>
+                      </div>
                     </p>
                     <a href="#" class="mt-10 w-full btn btn-primary">Обсудить проект</a>
-                    <p class="mt-6 text-xs leading-5">Цены могут отличаться взависимости от сложности проекта.</p>
+                    <p class="mt-6 text-xs leading-5">Цена может отличаться взависимости от сложности проекта.</p>
                   </div>
                 </div>
               </div>
