--- a/src/components/PortfolioCard.astro
+++ b/src/components/PortfolioCard.astro
@@ -33,6 +33,7 @@ const { image, title, description, label, activeButton, exturnalButton  } = Astr
                 alt={image.alt || 'cover'} 
                 width='400'
                 height='300'
+                transition:name={image.alt}
             /> 
         )}
     </div>
