--- a/src/pages/ru/portfolio/index.astro
+++ b/src/pages/ru/portfolio/index.astro
@@ -171,7 +171,7 @@ const t = useTranslations(lang);
        }},
        exturnalButton={{ 
          title: 'Смотреть проект',
-         link: 'https://byshikat.com/'
+         link: 'https://vratskyi.pages.dev/en/'
        }}
         />
 
