--- a/src/pages/ru/portfolio/lmdlvivua.astro
+++ b/src/pages/ru/portfolio/lmdlvivua.astro
@@ -144,7 +144,7 @@ const t = useTranslations(lang);
                       <div class="input"><a class="hover:text-primary duration-150 not-prose text-sm" href="https://lmd.lviv.ua/" target="_blank">https://lmd.lviv.ua/</a></div>
                     </div>
                     <div class="flex justify-center bg-base-200">
-                        <Image src={lmdlviv} class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" format='avif' alt='H2O Вода' width='600' height='400' />
+                        <Image src={lmdlviv} transition:name='Бумажные подарочные пакеты' class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" format='avif' alt='Бумажные подарочные пакеты' width='600' height='400' />
                     </div>
                   </div>
             </div>
