--- a/src/pages/ru/portfolio/h2ovoda-old.astro
+++ b/src/pages/ru/portfolio/h2ovoda-old.astro
@@ -151,7 +151,7 @@ const t = useTranslations(lang);
                       <div class="input"><a class="hover:text-primary duration-150 not-prose text-sm" href="https://old.h2ovoda.com.ua/" target="_blank">https://old.h2ovoda.com.ua/</a></div>
                     </div>
                     <div class="flex justify-center bg-base-200">
-                        <Image src={h2ovodaOld} class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" alt='H2O Вода' format='avif' width='600' height='400' />
+                        <Image src={h2ovodaOld} transition:name='Сайт доставки воды 1.0' class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" alt='Сайт доставки воды 1.0' format='avif' width='600' height='400' />
                     </div>
                   </div>
             </div>
