--- a/src/pages/ru/portfolio/vratskyi-blog.astro
+++ b/src/pages/ru/portfolio/vratskyi-blog.astro
@@ -61,10 +61,8 @@ const t = useTranslations(lang);
                 <h1 class="relative">Персональный блог и портфолио
             </h1>
             <p class="prose">
-                Представляем вашему вниманию универсальный и бесплатный шаблон, разработанный для использования с последней версией Astro. 
-                Этот шаблон может похвастаться частыми обновлениями, удобным интерфейсом и совместимостью с различными целями. 
-                Идеально подходит для демонстрации портфолио, создания статей в блоге и личного рассказа. 
-                Раскройте потенциал для самовыражения без особых усилий с помощью этого шаблона.
+                Разработал этот шаблон во время изучения <a class="link link-primary" href="https://astro.build/" target="_blank"> Astro Framework</a>, очень рад что комьюнити восприняло его <a class="link link-primary" href="https://github.com/vratskyi/vratskyi.github.io" target="_blank">положительно,</a> так-же его <a class="link link-primary" href="https://astro.build/themes/details/ov-template/" target="_blank">добавили</a> на сайт Astro.</a> 
+                Шаблон абсолютно бесплатный, мультиязычный, он позволяет писать блог, рассказать о себе и я думаю он довольно оригинальный вплане дизайна, обновляю его в свободное время.
             </p>
             <div class="grid grid-flow-col gap-x-5 place-content-center place-items-start mt-10 bg-base-200/50 backdrop-blur-3xl rounded-box p-5 lg:p-10">
                 <div class="grid place-items-center">
@@ -145,7 +143,7 @@ const t = useTranslations(lang);
                       <div class="input"><a class="hover:text-primary duration-150 not-prose text-sm" href="https://vratskyi.pages.dev/en/" target="_blank">https://vratskyi.pages.dev/en/</a></div>
                     </div>
                     <div class="flex justify-center bg-base-200">
-                        <Image src={vratskyiBlog} class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" format='avif' alt='H2O Вода' width='600' height='400' />
+                        <Image src={vratskyiBlog} transition:name='Персональный блог и портфолио' class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" format='avif' alt='Персональный блог и портфолио' width='600' height='400' />
                     </div>
                   </div>
             </div>
