--- a/src/pages/ru/services/index.astro
+++ b/src/pages/ru/services/index.astro
@@ -59,7 +59,7 @@ const t = useTranslations(lang);
 
           <div class="mx-auto max-w-2xl sm:text-center not-prose">
             <h2 class="text-8xl font-bold tracking-tight text-primary">Без подвоха</h2>
-            <p class="mt-6 text-lg leading-8">Цены которые не пугают своими <span class="uppercase font-thin">размерами</span></p>
+            <p class="mt-6 text-lg leading-8">Цены которые не пугают своими <span class="uppercase font-black">размерами</span></p>
           </div>
 
           <div class="mb-10">
